--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^3.3.7",
     "jquery": "^3.1.1",
     "vee-validate": "^2.0.0-beta.18",
