--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^3.3.7",
     "core-js": "^3.6.5",
     "vee-validate": "^2.2.15",
