--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "babel-core": "^7.0.0-bridge.0",
     "bootstrap": "^3.3.7",
     "core-js": "^3.6.5",
+    "cypress": "8.3.1",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
