--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^3.6.5",
     "cypress": "8.3.1",
+    "eslint-plugin-cypress": "^2.12.1",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.11",
     "vue-router": "^3.5.2"
@@ -41,7 +42,8 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "plugin:cypress/recommended"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
@@ -54,7 +56,8 @@
           "**/tests/unit/**/*.spec.{j,t}s?(x)"
         ],
         "env": {
-          "jest": true
+          "jest": true,
+          "cypress/globals": true
         }
       }
     ]
